examples/invalid/missing_pow_arg.mini
# Ошибка: пропущен аргумент в pow
pow(2,)
